<resources>
    <string name="app_name">ContactRoom</string>
    <string name="name_hint">Enter Name</string>
    <string name="occupation_hint">Occupation</string>
    <string name="save_text">Save</string>
    <string name="empty">Enter Information</string>
    <string name="description_text">Plus Button Icon</string>
    <string name="update_text">Update</string>
    <string name="delete_text">Delete</string>
</resources>